# gazelle:prefix sigs.k8s.io/kind
# gazelle:proto disable_global
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/kind",
    visibility = ["//visibility:public"],
    deps = ["//cmd/kind:go_default_library"],
)

go_binary(
    name = "kind",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"], exclude=["bazel-*/**", ".git/**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//cmd/kind:all-srcs",
        "//hack:all-srcs",
        "//images:all-srcs",
        "//pkg/build:all-srcs",
        "//pkg/cluster:all-srcs",
        "//pkg/exec:all-srcs",
        "//pkg/fs:all-srcs",
        "//vendor:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
