load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["kind.go"],
    importpath = "sigs.k8s.io/kind/cmd/kind",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/kind/build:go_default_library",
        "//cmd/kind/create:go_default_library",
        "//cmd/kind/delete:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//cmd/kind/build:all-srcs",
        "//cmd/kind/create:all-srcs",
        "//cmd/kind/delete:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
