load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "build.go",
        "build_image.go",
        "create.go",
        "delete.go",
        "root.go",
    ],
    importpath = "k8s.io/test-infra/kind/cmd/kind/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//kind/pkg/build:go_default_library",
        "//kind/pkg/cluster:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
