load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "any.go",
        "convert.go",
        "deepcopy.go",
        "default.go",
        "doc.go",
        "errors.go",
        "types.go",
        "validate.go",
        "version.go",
    ],
    importpath = "k8s.io/test-infra/kind/pkg/cluster/config",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "deepcopy_test.go",
        "validate_test.go",
    ],
    embed = [":go_default_library"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//kind/pkg/cluster/config/encoding:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
