load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["encoding.go"],
    importpath = "k8s.io/test-infra/kind/pkg/cluster/config/encoding",
    visibility = ["//visibility:public"],
    deps = [
        "//kind/pkg/cluster/config:go_default_library",
        "//vendor/github.com/ghodss/yaml:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["encoding_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = ["//kind/pkg/cluster/config:go_default_library"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
